2014-03-08  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserWidget.h:
	* X3DBrowserWidget.cpp: 

2014-03-06  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-03-05  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-03-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Image.h:
	* MagicImport.cpp:
	* History.cpp:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* LibraryView.cpp:
	* X3DBrowserWidget.cpp:
	* X3DBrowserEditor.cpp:
	* ViewpointList.cpp:
	* HistoryEditor.cpp:
	* Configuration.cpp:
	* X3DBrowserSelection.cpp:
	* OutlineSelection.h:
	* MaterialEditor.cpp:
	* X3DOutlineTreeView.h:
	* OutlineTreeModel.cpp:
	* OutlineSelection.cpp:
	* OutlineTreeObserver.h:
	* OutlineRouteGraph.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeObserver.cpp:
	* OutlineTreeViewEditor.cpp:
	* NodePropertiesEditor.cpp:
	* TextViewEditable.cpp:
	* OutlineCellRenderer.cpp: 

2014-03-05  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-02-27  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-02-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-02-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWidget.cpp: 

2014-02-23  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-02-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp:
	* PointSet.x3dv: 

2014-02-19  Holger Seelig  <holger.seelig@yahoo.de>

	* date.wrl: 

2014-02-16  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* gears.wrl:
	* X3DDialogInterface.cpp:
	* BrowserSelection.cpp: 

2014-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeViewEditor.cpp: 

2014-02-12  Holger Seelig  <holger.seelig@yahoo.de>
